feat(leaderboard): add selects and searchinputs

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -14,6 +14,9 @@
   --blue2: #2eb0fc;
   --blue3: #337ab7;
   --blue4: #23527c;
+  --blue5: #ebf5ff;
+  --blue6: #f7f8f9;
+  --blue7: #ecf8ff;
 
   --green1: #35c32a;
 
