--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -2,13 +2,15 @@
   --black: #000;
   --white: #fff;
 
-  --gray1: #333;
+  --gray1: #333333;
   --gray2: #788b99;
   --gray3: #cbcccd;
   --gray4: #667784;
   --gray5: #eff1f3;
   --gray6: #e7ebef;
   --gray7: #414f5a;
+  --gray8: #eeeeee;
+  --gray9: #dddddd;
 
   --blue1: #48bbff;
   --blue2: #2eb0fc;
